# semverify

./: Cargo.toml  README.md
src/: comparisons.rs  consts.rs  contexts.rs  enums.rs  functions.rs  lib.rs  macros.rs  modules.rs  name_resolution.rs  structs.rs  traits.rs
