[package]
name = "semverify"
version = "0.0.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"
default-run = "cargo-semverify"

[dependencies]
semver = "0.9.0"
serde = { version = "^1.0.0", features = ["derive"] }
syn = { version = "^1.0.0", features = ["full"] }

[[bin]]
name = "cargo-semverify"
path = "src/main.rs"